support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_bad_name.i
%module xxx

%name() int foo;

